docs/1.3/_sources/user-guide/model-gallery/spectral/plot_logparabola.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/model-gallery/spectral/plot_logparabola.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_user-guide_model-gallery_spectral_plot_logparabola.py>`
        to download the full example code. or to run this example in your browser via Binder

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_model-gallery_spectral_plot_logparabola.py:


.. _logparabola-spectral-model:

Log parabola spectral model
===========================

This model parametrises a log parabola spectrum.

It is defined by the following equation:

.. math::
        \phi(E) = \phi_0 \left( \frac{E}{E_0} \right) ^ {
          - \alpha - \beta \log{ \left( \frac{E}{E_0} \right) }
        }

Note that :math:`log` refers to the natural logarithm. This is consistent
with the `Fermi Science Tools
<https://fermi.gsfc.nasa.gov/ssc/data/analysis/scitools/source_models.html>`_
and `ctools
<http://cta.irap.omp.eu/ctools-devel/users/user_manual/getting_started/models.html#log-parabola>`_.
The `Sherpa <http://cxc.harvard.edu/sherpa/ahelp/logparabola.html>`_ package, however, uses :math:`log_{10}`. If you have
parametrization based on :math:`log_{10}` you can use the
:func:`~gammapy.modeling.models.LogParabolaSpectralModel.from_log10` method.

.. GENERATED FROM PYTHON SOURCE LINES 28-31

Example plot
------------
Here is an example plot of the model:

.. GENERATED FROM PYTHON SOURCE LINES 31-46

.. code-block:: Python


    from astropy import units as u
    import matplotlib.pyplot as plt
    from gammapy.modeling.models import LogParabolaSpectralModel, Models, SkyModel

    energy_bounds = [0.1, 100] * u.TeV
    model = LogParabolaSpectralModel(
        alpha=2.3,
        amplitude="1e-12 cm-2 s-1 TeV-1",
        reference=1 * u.TeV,
        beta=0.5,
    )
    model.plot(energy_bounds)
    plt.grid(which="both")




.. image-sg:: /user-guide/model-gallery/spectral/images/sphx_glr_plot_logparabola_001.png
   :alt: plot logparabola
   :srcset: /user-guide/model-gallery/spectral/images/sphx_glr_plot_logparabola_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 47-50

YAML representation
-------------------
Here is an example YAML file using the model:

.. GENERATED FROM PYTHON SOURCE LINES 50-55

.. code-block:: Python


    model = SkyModel(spectral_model=model, name="log-parabola-model")
    models = Models([model])

    print(models.to_yaml())




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    components:
    -   name: log-parabola-model
        type: SkyModel
        spectral:
            type: LogParabolaSpectralModel
            parameters:
            -   name: amplitude
                value: 1.0e-12
                unit: cm-2 s-1 TeV-1
            -   name: reference
                value: 1.0
                unit: TeV
            -   name: alpha
                value: 2.3
            -   name: beta
                value: 0.5
    metadata:
        creator: Gammapy 1.3
        date: '2024-11-26T10:08:47.394602'
        origin: null






.. _sphx_glr_download_user-guide_model-gallery_spectral_plot_logparabola.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: binder-badge

      .. image:: images/binder_badge_logo.svg
        :target: https://mybinder.org/v2/gh/gammapy/gammapy-webpage/v1.3?urlpath=lab/tree/notebooks/1.3/user-guide/model-gallery/spectral/plot_logparabola.ipynb
        :alt: Launch binder
        :width: 150 px

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_logparabola.ipynb <plot_logparabola.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_logparabola.py <plot_logparabola.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_logparabola.zip <plot_logparabola.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
